--- a/views/elements/header.ejs
+++ b/views/elements/header.ejs
@@ -39,14 +39,14 @@
                 <li class="nav-item <% if (page == 'index') __append('active-item'); %>">
                     <a href="/"><span class="icon-home"></span>  Home</a>                
                 </li>
-                <li class="nav-item <% if (page == 'series') __append('active-item'); %>">
-                    <a href="#"><span class="icon-series"></span>  Series</a>
+                <li class="nav-item <% if (page == 'Series') __append('active-item'); %>">
+                    <a href="/cat/Series"><span class="icon-series"></span>  Series</a>
                 </li>
-                <li class="nav-item <% if (page == 'movies') __append('active-item'); %>">
-                    <a href="#"><span class="icon-movies"></span>  Movies</a>
+                <li class="nav-item <% if (page == 'Movies') __append('active-item'); %>">
+                    <a href="/cat/Movies"><span class="icon-movies"></span>  Movies</a>
                 </li>
-                <li class="nav-item <% if (page == 'anime') __append('active-item'); %>">
-                    <a href="#"><span class="icon-anime"></span>  Anime </a>
+                <li class="nav-item <% if (page == 'Anime') __append('active-item'); %>">
+                    <a href="/cat/Anime"><span class="icon-anime"></span>  Anime </a>
                 </li>  
                 <li class="nav-search">
                     <input type="texte" name="search" id="search" size="30" placeholder="please enter title"/><button class="btn-search"><span class="icon-search"></span></button>
