--- a/views/episodePage.ejs
+++ b/views/episodePage.ejs
@@ -5,7 +5,7 @@
                 <div class=" item-content">
                     <div class=" item-info item-cover-info">
                         <div class="btn-cover">
-                            <a href="#"><button class="btn btn-cat btn-<%= episode.item.type.toLowerCase() %>"><i class="icon-<%= episode.item.type.toLowerCase() %>"></i> <%= episode.item.type %></button></a>
+                            <a href="/cat/<%= episode.item.type %>"><button class="btn btn-cat btn-<%= episode.item.type.toLowerCase() %>"><i class="icon-<%= episode.item.type.toLowerCase() %>"></i> <%= episode.item.type %></button></a>
                         </div>
                         <% var pos=0; var hideItPrev = ''; var hideItNext = '';
                             while((episode.ep_ref != other_episodes[pos].ep_ref) && (pos < other_episodes.length)){
@@ -58,7 +58,7 @@
                     </div>
                     <button class="btn btn-none"><i class="icon-light_off" ></i> Turn off light</button>
                     <button class="btn btn-none light-on z-index-10"><i class="icon-light_on"></i> Turn on light</button>
-                    <button class="btn btn-none"><i class="icon-calendar"></i> To be continued</button>
+                    <button class="btn btn-none"><i class="icon-continued" style="font-size: 35px ! important;"></i> To be continued</button>
                     <button class="btn btn-none"><i class="icon-download"></i> Download</button>
                     <button class="btn btn-none btn-report"><i class="icon-warning"></i> Report</button>
                 </div>
@@ -82,7 +82,7 @@
                         </figure>   
                     </div> 
                     <div class="col col-6">
-                            <a href="#"><button class="btn btn-cat btn-<%= episode.item.type.toLowerCase() %>"><i class="icon-<%= episode.item.type.toLowerCase() %>"></i> <%= episode.item.type %></button></a>
+                            <a href="/cat/<%= episode.item.type %>"><button class="btn btn-cat btn-<%= episode.item.type.toLowerCase() %>"><i class="icon-<%= episode.item.type.toLowerCase() %>"></i> <%= episode.item.type %></button></a>
                             <h1 class="cover-title"><%= episode.item.title %></h1>
                             <p class="cover-info cover-info-details">
                                 <span>Runtime: </span><%= episode.item.runtime %> min
@@ -112,7 +112,7 @@
             <% for(let i=0; i < related.length; i++) { %>      
                 <div class="col poster example1">
                     <div class="poster-links">
-                        <a href="#" class="btn-poster btn-<%= related[i].type.toLowerCase() %>"><i class="icon-television"></i> <%= related[i].type %></a><a class="btn-poster btn-<%= related[i].complete %>"><%= related[i].complete %></a>
+                        <a href="/cat/<%= related[i].type %>" class="btn-poster btn-<%= related[i].type.toLowerCase() %>"><i class="icon-television"></i> <%= related[i].type %></a><a class="btn-poster btn-<%= related[i].complete %>"><%= related[i].complete %></a>
                     </div>
                     <a href="/item/<%= related[i].id %>"><div class="poster-content">
                     <div class="poster-info">
